--- a/eventshoplinux/src/main/webapp/templates/user/query/groupingOpTpl.html
+++ b/eventshoplinux/src/main/webapp/templates/user/query/groupingOpTpl.html
@@ -48,7 +48,7 @@
 	<table align="left">
 		<tr>
 			<td><div id="showdivision6" style="display:none;">No.of Groups:<br /><input type="text" value="" id="num_of_groups" placeholder="Enter no of Groups" style="width:90%;"></div></td>
-			<td><div id="showdivision7" style="display:none;">Threshold values(val1,val2,..):<br /><input type="text" id="threshol_vals" value="30,70" placeholder="30,70,.." style="width:90%;"></div></td>
+			<td><div id="showdivision7" style="display:none;">Threshold values(val1,val2,..):<br /><input type="text" id="threshol_vals" value="30,70" placeholder="30,70"		style="width:90%;"></div></td>
 		</tr>
 	</table>
      
